--- a/CalcuStock/Base.lproj/Main.storyboard
+++ b/CalcuStock/Base.lproj/Main.storyboard
@@ -36,10 +36,10 @@
             </objects>
             <point key="canvasLocation" x="3006" y="210"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Search Table View Controller-->
         <scene sceneID="7dS-BD-Lk9">
             <objects>
-                <tableViewController id="lBw-xc-XXy" sceneMemberID="viewController">
+                <tableViewController id="lBw-xc-XXy" customClass="SearchTableViewController" customModule="CalcuStock" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="vGL-9t-RSL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
